ledger/parser/beancount_parser.go
// Code generated from BeanCountParser.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // BeanCountParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "", "", "", "", "", "", "'NULL'", "", "'|'", "'@@'", "'@'", "'{{'",
	"'}}'", "'{'", "'}'", "','", "'~'", "'*'", "'/'", "'+'", "'-'", "':'",
	"'('", "')'", "'['", "']'", "';'", "'.'", "", "", "'txn'", "'balance'",
	"'open'", "'close'", "'commodity'", "'pad'", "'event'", "'query'", "'custom'",
	"'price'", "'note'", "'document'", "'pushtag'", "'poptag'", "'pushmeta'",
	"'popmeta'", "'include'", "'option'", "'#'",
}
var symbolicNames = []string{
	"", "INDENT", "DEDENT", "NEWLINE", "WHITESPACE", "COMMENTS", "BOOL", "NONE",
	"CURRENCY", "PIPE", "ATAT", "AT", "LCURLCURL", "RCURLCURL", "LCURL", "RCURL",
	"COMMA", "TILDE", "ASTERISK", "SLASH", "PLUS", "MINUS", "COLON", "LPAREN",
	"RPAREN", "LBRACK", "RBRACK", "SEMI", "DOT", "FLAG", "NUMBER", "TXN", "BALANCE",
	"OPEN", "CLOSE", "COMMODITY", "PAD", "EVENT", "QUERY", "CUSTOM", "PRICE",
	"NOTE", "DOCUMENT", "PUSHTAG", "POPTAG", "PUSHMETA", "POPMETA", "INCLUDE",
	"OPTION", "HASH", "DATETIME", "ACCOUNT", "LINK", "TAG", "KEY", "STRING",
}

var ruleNames = []string{
	"ledger", "eol", "declarations", "pragma", "pushtag", "poptag", "pushmeta",
	"popmeta", "option", "include", "directive", "transaction", "transactionLine",
	"price", "balance", "open", "closeDirective", "commodity", "pad", "document",
	"note", "event", "query", "custom", "indentedMetadata", "metadata", "metadataLine",
	"metaValue", "metaValueList", "tagsOrLinks", "payeeNarration", "account",
	"filename", "currencyList", "numberExpr", "txn", "optflag", "booking",
	"postingList", "postingAndMetadata", "posting", "priceAnnotation", "amount",
	"amountTolerance", "partialAmount", "maybeNumber", "maybeCurrency", "costSpec",
	"costCompList", "costComp", "compoundAmount",
}

type BeanCountParser struct {
	*antlr.BaseParser
}

// NewBeanCountParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *BeanCountParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewBeanCountParser(input antlr.TokenStream) *BeanCountParser {
	this := new(BeanCountParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "BeanCountParser.g4"

	return this
}

// BeanCountParser tokens.
const (
	BeanCountParserEOF        = antlr.TokenEOF
	BeanCountParserINDENT     = 1
	BeanCountParserDEDENT     = 2
	BeanCountParserNEWLINE    = 3
	BeanCountParserWHITESPACE = 4
	BeanCountParserCOMMENTS   = 5
	BeanCountParserBOOL       = 6
	BeanCountParserNONE       = 7
	BeanCountParserCURRENCY   = 8
	BeanCountParserPIPE       = 9
	BeanCountParserATAT       = 10
	BeanCountParserAT         = 11
	BeanCountParserLCURLCURL  = 12
	BeanCountParserRCURLCURL  = 13
	BeanCountParserLCURL      = 14
	BeanCountParserRCURL      = 15
	BeanCountParserCOMMA      = 16
	BeanCountParserTILDE      = 17
	BeanCountParserASTERISK   = 18
	BeanCountParserSLASH      = 19
	BeanCountParserPLUS       = 20
	BeanCountParserMINUS      = 21
	BeanCountParserCOLON      = 22
	BeanCountParserLPAREN     = 23
	BeanCountParserRPAREN     = 24
	BeanCountParserLBRACK     = 25
	BeanCountParserRBRACK     = 26
	BeanCountParserSEMI       = 27
	BeanCountParserDOT        = 28
	BeanCountParserFLAG       = 29
	BeanCountParserNUMBER     = 30
	BeanCountParserTXN        = 31
	BeanCountParserBALANCE    = 32
	BeanCountParserOPEN       = 33
	BeanCountParserCLOSE      = 34
	BeanCountParserCOMMODITY  = 35
	BeanCountParserPAD        = 36
	BeanCountParserEVENT      = 37
	BeanCountParserQUERY      = 38
	BeanCountParserCUSTOM     = 39
	BeanCountParserPRICE      = 40
	BeanCountParserNOTE       = 41
	BeanCountParserDOCUMENT   = 42
	BeanCountParserPUSHTAG    = 43
	BeanCountParserPOPTAG     = 44
	BeanCountParserPUSHMETA   = 45
	BeanCountParserPOPMETA    = 46
	BeanCountParserINCLUDE    = 47
	BeanCountParserOPTION     = 48
	BeanCountParserHASH       = 49
	BeanCountParserDATETIME   = 50
	BeanCountParserACCOUNT    = 51
	BeanCountParserLINK       = 52
	BeanCountParserTAG        = 53
	BeanCountParserKEY        = 54
	BeanCountParserSTRING     = 55
)

// BeanCountParser rules.
const (
	BeanCountParserRULE_ledger             = 0
	BeanCountParserRULE_eol                = 1
	BeanCountParserRULE_declarations       = 2
	BeanCountParserRULE_pragma             = 3
	BeanCountParserRULE_pushtag            = 4
	BeanCountParserRULE_poptag             = 5
	BeanCountParserRULE_pushmeta           = 6
	BeanCountParserRULE_popmeta            = 7
	BeanCountParserRULE_option             = 8
	BeanCountParserRULE_include            = 9
	BeanCountParserRULE_directive          = 10
	BeanCountParserRULE_transaction        = 11
	BeanCountParserRULE_transactionLine    = 12
	BeanCountParserRULE_price              = 13
	BeanCountParserRULE_balance            = 14
	BeanCountParserRULE_open               = 15
	BeanCountParserRULE_closeDirective     = 16
	BeanCountParserRULE_commodity          = 17
	BeanCountParserRULE_pad                = 18
	BeanCountParserRULE_document           = 19
	BeanCountParserRULE_note               = 20
	BeanCountParserRULE_event              = 21
	BeanCountParserRULE_query              = 22
	BeanCountParserRULE_custom             = 23
	BeanCountParserRULE_indentedMetadata   = 24
	BeanCountParserRULE_metadata           = 25
	BeanCountParserRULE_metadataLine       = 26
	BeanCountParserRULE_metaValue          = 27
	BeanCountParserRULE_metaValueList      = 28
	BeanCountParserRULE_tagsOrLinks        = 29
	BeanCountParserRULE_payeeNarration     = 30
	BeanCountParserRULE_account            = 31
	BeanCountParserRULE_filename           = 32
	BeanCountParserRULE_currencyList       = 33
	BeanCountParserRULE_numberExpr         = 34
	BeanCountParserRULE_txn                = 35
	BeanCountParserRULE_optflag            = 36
	BeanCountParserRULE_booking            = 37
	BeanCountParserRULE_postingList        = 38
	BeanCountParserRULE_postingAndMetadata = 39
	BeanCountParserRULE_posting            = 40
	BeanCountParserRULE_priceAnnotation    = 41
	BeanCountParserRULE_amount             = 42
	BeanCountParserRULE_amountTolerance    = 43
	BeanCountParserRULE_partialAmount      = 44
	BeanCountParserRULE_maybeNumber        = 45
	BeanCountParserRULE_maybeCurrency      = 46
	BeanCountParserRULE_costSpec           = 47
	BeanCountParserRULE_costCompList       = 48
	BeanCountParserRULE_costComp           = 49
	BeanCountParserRULE_compoundAmount     = 50
)

// ILedgerContext is an interface to support dynamic dispatch.
type ILedgerContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLedgerContext differentiates from other interfaces.
	IsLedgerContext()
}

type LedgerContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLedgerContext() *LedgerContext {
	var p = new(LedgerContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BeanCountParserRULE_ledger
	return p
}

func (*LedgerContext) IsLedgerContext() {}

func NewLedgerContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LedgerContext {
	var p = new(LedgerContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BeanCountParserRULE_ledger

	return p
}

func (s *LedgerContext) GetParser() antlr.Parser { return s.parser }

func (s *LedgerContext) Declarations() IDeclarationsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclarationsContext)
}

func (s *LedgerContext) EOF() antlr.TerminalNode {
	return s.GetToken(BeanCountParserEOF, 0)
}

func (s *LedgerContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LedgerContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LedgerContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BeanCountParserVisitor:
		return t.VisitLedger(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BeanCountParser) Ledger() (localctx ILedgerContext) {
	localctx = NewLedgerContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, BeanCountParserRULE_ledger)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(102)
		p.declarations(0)
	}
	{
		p.SetState(103)
		p.Match(BeanCountParserEOF)
	}

	return localctx
}

// IEolContext is an interface to support dynamic dispatch.
type IEolContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsEolContext differentiates from other interfaces.
	IsEolContext()
}

type EolContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyEolContext() *EolContext {
	var p = new(EolContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BeanCountParserRULE_eol
	return p
}

func (*EolContext) IsEolContext() {}

func NewEolContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *EolContext {
	var p = new(EolContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BeanCountParserRULE_eol

	return p
}

func (s *EolContext) GetParser() antlr.Parser { return s.parser }

func (s *EolContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(BeanCountParserNEWLINE, 0)
}

func (s *EolContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EolContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *EolContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BeanCountParserVisitor:
		return t.VisitEol(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BeanCountParser) Eol() (localctx IEolContext) {
	localctx = NewEolContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, BeanCountParserRULE_eol)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(105)
		p.Match(BeanCountParserNEWLINE)
	}

	return localctx
}

// IDeclarationsContext is an interface to support dynamic dispatch.
type IDeclarationsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclarationsContext differentiates from other interfaces.
	IsDeclarationsContext()
}

type DeclarationsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclarationsContext() *DeclarationsContext {
	var p = new(DeclarationsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BeanCountParserRULE_declarations
	return p
}

func (*DeclarationsContext) IsDeclarationsContext() {}

func NewDeclarationsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclarationsContext {
	var p = new(DeclarationsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BeanCountParserRULE_declarations

	return p
}

func (s *DeclarationsContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclarationsContext) Declarations() IDeclarationsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclarationsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclarationsContext)
}

func (s *DeclarationsContext) NEWLINE() antlr.TerminalNode {
	return s.GetToken(BeanCountParserNEWLINE, 0)
}

func (s *DeclarationsContext) Directive() IDirectiveContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDirectiveContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDirectiveContext)
}

func (s *DeclarationsContext) Pragma() IPragmaContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPragmaContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPragmaContext)
}

func (s *DeclarationsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclarationsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclarationsContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BeanCountParserVisitor:
		return t.VisitDeclarations(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BeanCountParser) Declarations() (localctx IDeclarationsContext) {
	return p.declarations(0)
}

func (p *BeanCountParser) declarations(_p int) (localctx IDeclarationsContext) {
	var _parentctx antlr.ParserRuleContext = p.GetParserRuleContext()
	_parentState := p.GetState()
	localctx = NewDeclarationsContext(p, p.GetParserRuleContext(), _parentState)
	var _prevctx IDeclarationsContext = localctx
	var _ antlr.ParserRuleContext = _prevctx // TODO: To prevent unused variable warning.
	_startState := 4
	p.EnterRecursionRule(localctx, 4, BeanCountParserRULE_declarations, _p)

	defer func() {
		p.UnrollRecursionContexts(_parentctx)
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.GetParserRuleContext().SetStop(p.GetTokenStream().LT(-1))
	p.SetState(116)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			if p.GetParseListeners() != nil {
				p.TriggerExitRuleEvent()
			}
			_prevctx = localctx
			p.SetState(114)
			p.GetErrorHandler().Sync(p)
			switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) {
			case 1:
				localctx = NewDeclarationsContext(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, BeanCountParserRULE_declarations)
				p.SetState(108)

				if !(p.Precpred(p.GetParserRuleContext(), 4)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 4)", ""))
				}
				{
					p.SetState(109)
					p.Match(BeanCountParserNEWLINE)
				}

			case 2:
				localctx = NewDeclarationsContext(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, BeanCountParserRULE_declarations)
				p.SetState(110)

				if !(p.Precpred(p.GetParserRuleContext(), 3)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 3)", ""))
				}
				{
					p.SetState(111)
					p.Directive()
				}

			case 3:
				localctx = NewDeclarationsContext(p, _parentctx, _parentState)
				p.PushNewRecursionContext(localctx, _startState, BeanCountParserRULE_declarations)
				p.SetState(112)

				if !(p.Precpred(p.GetParserRuleContext(), 2)) {
					panic(antlr.NewFailedPredicateException(p, "p.Precpred(p.GetParserRuleContext(), 2)", ""))
				}
				{
					p.SetState(113)
					p.Pragma()
				}

			}

		}
		p.SetState(118)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}

	return localctx
}

// IPragmaContext is an interface to support dynamic dispatch.
type IPragmaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPragmaContext differentiates from other interfaces.
	IsPragmaContext()
}

type PragmaContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPragmaContext() *PragmaContext {
	var p = new(PragmaContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BeanCountParserRULE_pragma
	return p
}

func (*PragmaContext) IsPragmaContext() {}

func NewPragmaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PragmaContext {
	var p = new(PragmaContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BeanCountParserRULE_pragma

	return p
}

func (s *PragmaContext) GetParser() antlr.Parser { return s.parser }

func (s *PragmaContext) Pushtag() IPushtagContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPushtagContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPushtagContext)
}

func (s *PragmaContext) Poptag() IPoptagContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPoptagContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPoptagContext)
}

func (s *PragmaContext) Pushmeta() IPushmetaContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPushmetaContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPushmetaContext)
}

func (s *PragmaContext) Popmeta() IPopmetaContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IPopmetaContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IPopmetaContext)
}

func (s *PragmaContext) Option() IOptionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOptionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IOptionContext)
}

func (s *PragmaContext) Include() IIncludeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIncludeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIncludeContext)
}

func (s *PragmaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PragmaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PragmaContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BeanCountParserVisitor:
		return t.VisitPragma(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BeanCountParser) Pragma() (localctx IPragmaContext) {
	localctx = NewPragmaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, BeanCountParserRULE_pragma)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(125)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case BeanCountParserPUSHTAG:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(119)
			p.Pushtag()
		}

	case BeanCountParserPOPTAG:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(120)
			p.Poptag()
		}

	case BeanCountParserPUSHMETA:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(121)
			p.Pushmeta()
		}

	case BeanCountParserPOPMETA:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(122)
			p.Popmeta()
		}

	case BeanCountParserOPTION:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(123)
			p.Option()
		}

	case BeanCountParserINCLUDE:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(124)
			p.Include()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IPushtagContext is an interface to support dynamic dispatch.
type IPushtagContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPushtagContext differentiates from other interfaces.
	IsPushtagContext()
}

type PushtagContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPushtagContext() *PushtagContext {
	var p = new(PushtagContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BeanCountParserRULE_pushtag
	return p
}

func (*PushtagContext) IsPushtagContext() {}

func NewPushtagContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PushtagContext {
	var p = new(PushtagContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BeanCountParserRULE_pushtag

	return p
}

func (s *PushtagContext) GetParser() antlr.Parser { return s.parser }

func (s *PushtagContext) PUSHTAG() antlr.TerminalNode {
	return s.GetToken(BeanCountParserPUSHTAG, 0)
}

func (s *PushtagContext) TAG() antlr.TerminalNode {
	return s.GetToken(BeanCountParserTAG, 0)
}

func (s *PushtagContext) Eol() IEolContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEolContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IEolContext)
}

func (s *PushtagContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PushtagContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PushtagContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case BeanCountParserVisitor:
		return t.VisitPushtag(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *BeanCountParser) Pushtag() (localctx IPushtagContext) {
	localctx = NewPushtagContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, BeanCountParserRULE_pushtag)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(127)
		p.Match(BeanCountParserPUSHTAG)
	}
	{
		p.SetState(128)
		p.Match(BeanCountParserTAG)
	}
	{
		p.SetState(129)
		p.Eol()
	}

	return localctx
}

// IPoptagContext is an interface to support dynamic dispatch.
type IPoptagContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsPoptagContext differentiates from other interfaces.
	IsPoptagContext()
}

type PoptagContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPoptagContext() *PoptagContext {
	var p = new(PoptagContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = BeanCountParserRULE_poptag
	return p
}

func (*PoptagContext) IsPoptagContext() {}

func NewPoptagContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PoptagContext {
	var p = new(PoptagContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = BeanCountParserRULE_poptag

	return p
}

func (s *PoptagContext) GetParser() antlr.Parser { return s.parser }
